[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velog-cli"
version = "0.1.0"
description = "Velog public RSS/GraphQL CLI — fetch latest posts for any Velog user without API keys."
readme = "README.md"
authors = [{ name = "Chloe" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.scripts]
velog-cli = "velog_cli.cli:main"
